sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:4: error: not found: value isSmaleer
                  {test=true; for (i<-0 to (x-2)) {if (isSmaller((i+1), i)) {swap(i, (i+1)); test=false}; if (isSmaleer((x-i), (x-i-1))) {swap((x-i), (x-i-1)); test=false}}}
                                                                                                              ^