sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {var x:Int=getValueCount(); var y:Int=0; var test:Boolean=false
while (!test)
                  {test=true; for (i<-0 to (x-2)) {if (isSmaller((i+1), i)) {swap(i, (i+1)); test=false}; if (isSmaleer((x-i), (x-i-1))) {swap((x-i), (x-i-1)); test=false}}}



                 }